# All_In_One_Toolkit_Tauri

./: README.md  angular.json  contribution.md  css_library.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
.github/workflows/: main.yml
public/assets/css/: input.css  output.css
src/: env.ts  index.css  index.html  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: about.rs  css_library.json  css_library.rs  main.rs  manage_file.rs  manage_xls.rs  virus_total.rs
src/app/: app.component.html  app.component.ts  app.config.ts  app.routes.ts
src/app/models/: dashboard-link.ts
src/app/services/: about.service.ts  dashboard.service.ts
src/app/views/about/: about.component.html  about.component.ts
src/app/views/array-visualizer/: array-visualizer.component.html  array-visualizer.component.ts
src/app/views/base64-enc-dec/: base64-enc-dec.component.html  base64-enc-dec.component.ts
src/app/views/color-pallete/: color-pallete.component.html  color-pallete.component.ts
src/app/views/css-converter/: css-converter.component.html  css-converter.component.ts
src/app/views/csv-to-table/: csv-to-table.component.html  csv-to-table.component.ts
src/app/views/dashboard/: dashboard.component.html  dashboard.component.ts
src/app/views/json-to-table/: json-to-table.component.html  json-to-table.component.ts
src/app/views/json-to-xls/: json-to-xls.component.html  json-to-xls.component.ts
src/app/views/json-to-xml/: json-to-xml.component.html  json-to-xml.component.ts
src/app/views/key-code/: key-code.component.html  key-code.component.ts
src/app/views/markdown-editor/: markdown-editor.component.html  markdown-editor.component.ts
src/app/views/md5-enc-dec/: md5-enc-dec.component.html  md5-enc-dec.component.ts
src/app/views/plist-to-table/: plist-to-table.component.html  plist-to-table.component.ts
src/app/views/sha256-enc-dec/: sha256-enc-dec.component.ts
src/environments/: environment.ts
src/pages/: About.tsx  App.tsx  Base64EncDec.tsx  ColorPalette.tsx  CountWords.tsx  CssConverter.tsx  CsvToTable.tsx  DataToChart.tsx  Footer.tsx  Header.tsx  Home.tsx  JsonToTable.tsx  JsonToXls.tsx  JsonToXml.tsx  KeyCode.tsx  MarkdownEditor.tsx  Nav.tsx  PlistToTable.tsx  UrlEncDec.tsx  VirusTotal.tsx  VisualArray.tsx  WindNotify.tsx  XlsToJson.tsx  XlsToXml.tsx  XmlToJson.tsx  XmlToTable.tsx  XmlToXls.tsx  keyboard.tsx
(+34 files in other folders)
