[package]
name = "all_in_one_toolkit"
version = "0.5.1"
description = "All In One Toolkit"
authors = ["Dmitriy303"]
license = "MIT License"
repository = "https://github.com/rusnakdima/All_In_One_Toolkit_Tauri"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
rust_xlsxwriter = "0.43.0"
reqwest = "0.11.18"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
